<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/txt_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/channel_header"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_title_font_size" />

    <TextView
        android:id="@+id/txt_channel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_channel"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:text="@string/channel_title"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font_size" />

    <ListView
        android:id="@+id/channel_listview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_done"
        android:layout_below="@+id/txt_channel_title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:cacheColorHint="@color/transparent" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button_bg_color"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_font_size" />

</RelativeLayout>